Generate swaggo docs and add api for events endpoints
